<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bkg_custom_grad_lin"
    android:layout_height="match_parent"
    tools:context=".GameFinishedFragment">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_hor_30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.30" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_hor_70"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.70" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_hor_35"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_hor_10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.10" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_hor_05"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_hor_20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.20" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_hor_13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.13" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_hor_95"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_hor_50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.50" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vert_95"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vert_05"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <ImageView
        android:id="@+id/emoji_result"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_margin="8dp"
        android:contentDescription="@string/game_over"
        android:src="@drawable/smile"
        app:layout_constraintBottom_toTopOf="@id/tv_required_answers"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline_hor_05"
        tools:srcCompat="@drawable/sad" />

    <TextView
        android:id="@+id/tv_required_answers"
        android:layout_width="0dp"
        android:fontFamily="@font/montserrat_black"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/required_score"
        android:textColor="@color/add_colour_the_most_dark"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/tv_user_score_answers"
        app:layout_constraintEnd_toEndOf="@id/guideline_vert_95"
        app:layout_constraintStart_toStartOf="@id/guideline_vert_05"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/tv_user_score_answers"
        android:layout_width="0dp"
        android:fontFamily="@font/montserrat_black"
        android:layout_height="wrap_content"
        android:text="@string/score_answers"
        android:textColor="@color/add_colour_the_most_dark"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/tv_required_percentage"
        app:layout_constraintEnd_toEndOf="@id/guideline_vert_95"
        app:layout_constraintStart_toStartOf="@id/guideline_vert_05"
        app:layout_constraintTop_toBottomOf="@id/tv_required_answers" />

    <TextView
        android:id="@+id/tv_required_percentage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/montserrat_black"
        android:text="@string/required_percentage"
        android:textColor="@color/add_colour_the_most_dark"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/tv_score_percentage"
        app:layout_constraintEnd_toEndOf="@id/guideline_vert_95"
        app:layout_constraintStart_toStartOf="@id/guideline_vert_05"
        app:layout_constraintTop_toBottomOf="@id/tv_user_score_answers"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/tv_score_percentage"
        android:layout_width="0dp"
        android:visibility="invisible"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/montserrat_black"
        android:text="@string/score_percentage"
        android:textColor="@color/add_colour_the_most_dark"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guideline_vert_95"
        app:layout_constraintStart_toStartOf="@id/guideline_vert_05"
        app:layout_constraintTop_toBottomOf="@id/tv_required_percentage" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_retry"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:fontFamily="@font/montserrat_black"
        android:text="@string/retry"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@id/guideline_vert_95"
        app:layout_constraintStart_toStartOf="@id/guideline_vert_05"
        app:layout_constraintTop_toBottomOf="@id/guideline_hor_70" />

    <TextView
        android:id="@+id/tv_dovn_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/opensans_regular"
        android:text="@string/app_name_dovn_text"
        android:textAllCaps="true"
        android:textSize="11sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline_hor_95" />


</androidx.constraintlayout.widget.ConstraintLayout>